[package]
name = "iw"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "Iron-Wolf a Wolfenstein 3D source port"

[features]
sdl = ["vga-emu/sdl", "opl-emu/sdl"]
web = [
    "vga-emu/web",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-timer",
]

[lib]
name = "iw"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "iw"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
cfg-if = "1.0"
async-std = { version = "1.12.0", features = ["unstable"] }
futures = "0.3.30"
vga-emu = "0.6.1"                                           # { path="../vga-emu/" }
opl-emu = "0.2.2"                                           # { path = "../opl-emu/" }
toml = "0.8.19"
# feature web
wasm-bindgen = { version = "0.2.93", optional = true, features = [
    "serde-serialize",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.70", optional = true }
web-sys = { version = "0.3.70", optional = true, features = [
    'Document',
    'Window',
    'HtmlInputElement',
    'MouseEvent',
    'File',
    'FileList',
    'FileReader',
    'Blob',
    'Performance',
    'console',
] }
wasm-timer = { version = "0.2.5", optional = true }

[profile.bench]
debug = true

[profile.dev]
debug = true
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
