[package]
name = "iw"
version = "0.1.0"
edition = "2024"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "Iron-Wolf a Wolfenstein 3D source port"

[features]
sdl = ["vga-emu/sdl", "opl-emu/sdl", "sdl2", "tokio/rt-multi-thread"]
web = [
    "vga-emu/web",
    "opl-emu/web",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-timer",
]
tracing = [
    "vga-emu/tracing",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-appender",
]

[lib]
name = "iw"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "iw"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
cfg-if = "1.0"
toml = "0.8.22"
tokio = { version = "1.45.0", features = ["rt", "time"] }
vga-emu = "0.7.8"                                         # { path = "../vga-emu/" }
opl-emu = "0.2.7"                                         # { path = "../opl-emu/" }

# feature tracing
tracing = { version = "0.1.41", optional = true, default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3.19", optional = true, default-features = false, features = [
    "json",
] }
tracing-appender = { version = "0.2.3", optional = true, default-features = false }

# feature sdl
sdl2 = { version = "0.37.0", optional = true, default-features = false, features = [
    "mixer",
] }

# feature web
wasm-bindgen = { version = "0.2.100", optional = true, features = [
    "serde-serialize",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.77", optional = true }
web-sys = { version = "0.3.77", optional = true, features = [
    'Document',
    'Window',
    'HtmlInputElement',
    'MouseEvent',
    'File',
    'FileList',
    'FileReader',
    'Blob',
    'Performance',
    'console',
] }
wasm-timer = { version = "0.2.5", optional = true }

[profile.bench]
debug = true

[profile.dev]
debug = true
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
