[package]
name = "iron-wolf"
version = "0.1.0"
edition = "2024"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "Iron-Wolf a Wolfenstein 3D source port"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/iron-wolf"

[features]
sdl = [
    "vga-emu/sdl2",
    "opl-emu/sdl",
    "sdl2",
    "tokio/rt-multi-thread"
]
web = [
    "vga-emu/web",
    "opl-emu/web",
    "tokio/rt",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:js-sys",
]
test = [
    "vga-emu/test",
    "opl-emu/sdl",
    "sdl2",
    "tokio/rt-multi-thread",
    "tokio/test-util",
    "tokio/macros",
]

[lib]
name = "iw"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "iw"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
cfg-if = "1.0.4"
toml = "0.9.10"
vga-emu = "0.8.5"  # { path = "../vga-emu/" }
opl-emu = "0.4.2"  # { path = "../opl-emu/" }
web-time = "1.1.0" # std::time for web that needs an crate to be compatible :/
tokio = { version = "1.48.0", default-features = false }

# feature sdl
sdl2 = { version = "0.38.0", optional = true, default-features = false, features = [
    "mixer",
] }
libc = "0.2.177" # temp override, until sdl3/mixed can be used which also will resolve the dependency conflict around libc

# feature web
wasm-bindgen = { version = "0.2.106", optional = true, features = [
    "serde-serialize",
] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen-futures = { version = "0.4.56", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.83", optional = true }
web-sys = { version = "0.3.83", optional = true, features = [
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "Response",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioParam",
    "AudioBufferSourceNode",
    "IdbFactory",
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "DomStringList",
] }
wasm-timer = { version = "0.2.5", optional = true }

[profile.bench]
debug = true

[profile.dev]
debug = true
opt-level = 3              # without 3, iw crashes with a stack overflow...
split-debuginfo = "packed"

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
